FEA: Implementing User API with mocked database and pyresttest.
